Add support for converting PMTiles